fdo#38895 fix toggling of numbering separator on Autocaption page

Only enable the Edit box if the overall option is enabled

Change-Id: Ica0f973d22b89a37bd690c285d7cc0ae5204b7a8